# verdict

./: .dockerignore  .gitignore  ACCEPTANCE.md  CHANGELOG.md  Dockerfile  EVAL_SET.yaml  LICENSE  README.md  conftest.py  pyproject.toml
app/: README.md
data/sample_store/depmap/: gene_effect.parquet
data/sample_store/expression/: expression.parquet
data/sample_store/moonen/: cre_gene.parquet
data/sample_store/opentargets/: opentargets.parquet
data/sample_store/zhu/: de.parquet  gene.parquet  perturbation.parquet
docs/: DATA_SOURCES.md
finding/: README.md
scripts/: build_sample_store.py  calibrate.py  demo_contrast.py  download_data.sh  inspect_moonen.py  inspect_zhu.py  run_eval.py  scan_direction.py  scan_essentiality.py  verify_sources.py  verify_tyk2_trace.py
tests/: helpers.py  test_checks_contract.py  test_checks_firing.py  test_composer.py  test_engine_offline.py  test_eval_reproduces.py  test_fabrication_impossible.py  test_receipts_gate.py
verdict/: gate.py  manifest.py  receipts.py  store.py  validator.py
verdict/checks/: base.py  circularity.py  direction.py  essentiality.py  power.py  programs.py  range_scope.py  registry.py  selectivity_safety.py
verdict/compose/: composer.py  dossier.py  support.py
verdict/data/: genes.py  ingest_depmap.py  ingest_expression.py  ingest_moonen.py  ingest_opentargets.py  ingest_zhu.py
verdict/engine/: __init__.py  adjudicator.py  baseline.py  client.py  contrast.py  experiment.py  parser.py  pipeline.py  selector.py  trace.py
verdict/eval/: loader.py  runner.py
