[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict"
version = "0.1.0"
description = "Provenance-gated target-validation engine over immune-disease functional-genomics atlases."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2",
  "polars>=0.20",
  "pyarrow>=15",
  "duckdb>=0.10",
  "anndata>=0.10",
  "h5py>=3.10",
  "openpyxl>=3.1",
  "requests>=2",
  "mygene>=3.2",
  "jinja2>=3",
  "anthropic>=0.40",
  "streamlit>=1.30",
  "plotly>=5",
  "networkx>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["verdict*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
